# glutils

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/glutils/: __init__.py
src/glutils/funcitertools/: __init__.py  funcitertools.py
src/glutils/info_theory/: __init__.py  info_theory.py
src/glutils/ml/: __init__.py  ml.py
tests/: test_funcitertools.py  test_info_theory.py  test_ml.py
