[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glutils"
version = "0.1.0"
description = "Consolidated ML, Information Theory, and Functional Utilities"
authors = [
    {name = "Luciano Gerber", email = "L.Gerber@mmu.ac.uk"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/yourusername/glutils"
Repository = "https://github.com/yourusername/glutils"
Issues = "https://github.com/yourusername/glutils/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["glutils*"]